# crewai-scheduler

./: .dockerignore  .gitignore  Dockerfile  MONITORING.md  README.md  Tiltfile  agents.py  async_io.py  main.py  models.py  pyproject.toml
k8s/: deployment.yaml  job.yaml  namespace.yaml  secret.yaml.example
k8s/monitoring/: grafana.yaml  opentelemetry-collector.yaml  prometheus-config.yaml  prometheus.yaml
